--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,11 +21,17 @@ jobs:
 
       - name: Create release branches
         run: |
+          echo "$(basename "$0")"
+          cat "$(basename "$0")"
           # Get the pushed tag
           TAG=${GITHUB_REF#refs/tags/}
+          echo ${TAG}
           
           # Extract major, minor, and patch versions
           IFS='.' read -r MAJOR MINOR PATCH &lt;&lt;&lt; "${TAG#v}"
+          echo ${MAJOR}
+          echo ${MINOR}
+          echo ${PATCH}
           
           # Create release branch for the exact version
           git checkout -b "release/${TAG}"
